--- a/#source/sass/style.sass
+++ b/#source/sass/style.sass
@@ -15,9 +15,13 @@
 //</ОБНУЛЕНИЯ, ОБЩИЕ ПАРАМЕТРЫ>==========================================================================================
 
 //<ОБОЛОЧКА>=============================================================================================================
+body, html
+  background-color: #000000
+
 .wrapper
   width: 100%
   min-height: 100%
+  color: #ffffff
   overflow: hidden
 
 //</ОБОЛОЧКА>============================================================================================================
@@ -47,7 +51,17 @@
 //</ОСНОВНАЯ СЕТКА>======================================================================================================
 
 //<ОСНОВНОЙ БЛОК>========================================================================================================
-
+.fit-img
+  display: flex
+  align-items: center
+  justify-content: center
+  overflow: hidden
+  &>img
+    width: 100%
+    max-width: 100%
+    height: 100%
+    max-height: 100%
+    object-fit: cover
 //</ОСНОВНОЙ БЛОК>=======================================================================================================
 
 //<ПОДКЛЮЧЕНИЯ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЕЛЕМЕНТОВ>=========================================================================
