--- a/#source/sass/style.sass
+++ b/#source/sass/style.sass
@@ -56,12 +56,49 @@ body, html
   align-items: center
   justify-content: center
   overflow: hidden
-  &>img
+  & img
     width: 100%
     max-width: 100%
     height: 100%
     max-height: 100%
     object-fit: cover
+
+.exl-modal
+  position: fixed
+  top: 0
+  left: 0
+  z-index: 10
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 100vw
+  height: 100vh
+  &__dialog
+    position: relative
+    padding: 30px 60px
+    font-family: Poppins
+    font-weight: normal
+    font-size: 21px
+    line-height: 30px
+    color: #000000
+    background: #CFCFCF
+    border-radius: 15px
+    &>button
+      position: absolute
+      top: -10px
+      right: -10px
+      width: 30px
+      height: 30px
+      background-color: transparent
+
+.modal
+  visibility: hidden
+  opacity: 0
+
+.show
+  visibility: visible
+  opacity: 1
+  transition: all 0.5s ease-out
 //</ОСНОВНОЙ БЛОК>=======================================================================================================
 
 //<ПОДКЛЮЧЕНИЯ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЕЛЕМЕНТОВ>=========================================================================
