in process of creating adaptive header

--- a/#source/sass/assets/_mixins.sass
+++ b/#source/sass/assets/_mixins.sass
@@ -1,5 +1,5 @@
 //<ДЕЛАЕТ АДАПТИВНЫЙ ШРИФТ>==============================================================================================
-@mixin adaptive-font($pcSize, $mobSize)
+@mixin adf($pcSize, $mobSize)
   $addSize: $pcSize - $mobSize
   $addMobSize: $addSize + $addSize * 0.7
 
