--- a/#source/sass/blocks/_header.sass
+++ b/#source/sass/blocks/_header.sass
@@ -97,6 +97,7 @@
   &__list-item
     position: relative
     width: min-content
+    text-align: center
     &>a
       font-family: ChocolateBox
       font-style: normal
