--- a/#source/sass/blocks/_header.sass
+++ b/#source/sass/blocks/_header.sass
@@ -71,20 +71,11 @@
   height: auto
   padding: 35px 65px
   border-radius: 10px 0px 10px 10px
-  overflow: hidden
+  background-color: rgba(255, 255, 255, 0.8)
+  overflow-y: auto
   transition: all 0.3s linear
   visibility: hidden
   opacity: 0
-  &::before
-    content: ''
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    background-color: #ffffff
-    opacity: 0.8
-    z-index: -1
   &_active
     visibility: visible
     opacity: 1
@@ -156,6 +147,7 @@
   position: fixed
   top: 0
   left: 0
+  z-index: 102
   height: 100vh
   width: 100vw
   &__active
