create header and it adaptive

--- a/#source/sass/assets/_media.sass
+++ b/#source/sass/assets/_media.sass
@@ -33,6 +33,12 @@
         height: 1px
         background-color: #777777
 
+  .preview
+    padding: 70px 0 0 0
+    &__img
+      width: 335px
+      height: 341px
+
 @media (max-width: 515px)
   .header
     &__top
@@ -83,3 +89,16 @@
         width: 300vw
     &__list
       padding: 0 0 60px 0
+
+  .preview
+    padding: 40px 0 0 0
+    &__img
+      width: 255px
+      height: 260px
+
+@media (max-width: 435px)
+  .exl-modal
+    &__dialog
+      padding: 10px 20px
+      font-size: 17px
+      line-height: 30px
