--- a/#source/sass/assets/_mixins.sass
+++ b/#source/sass/assets/_mixins.sass
@@ -4,12 +4,25 @@
   $addMobSize: $addSize + $addSize * 0.7
 
   @media (max-width: 767px)
-    font-size: calc(#{$mobSize + px} + #{$addMobSize} *((100vw - 320px) / #{$containerWidth}))
+    font-size: calc(#{$mobSize + px} + #{$addMobSize} *((100vw - 320px) / #{$maxWidth}))
 
   @media (min-width: 767px)
-    font-size: calc(#{$mobSize + px} + #{$addSize} *(100vw / #{$containerWidth}))
+    font-size: calc(#{$mobSize + px} + #{$addSize} *(100vw / #{$maxWidth}))
 
 //</ДЕЛАЕТ АДАПТИВНЫЙ ШРИФТ>=============================================================================================
+
+//<ДЕЛАЕТ АДАПТИВНЫЙ СТРОКОВЫЙ ИНТЕРВАЛ>=================================================================================
+@mixin adi($pcSize, $mobSize)
+  $addSize: $pcSize - $mobSize
+  $addMobSize: $addSize + $addSize * 0.7
+
+  @media (max-width: 767px)
+    line-height: calc(#{$mobSize + px} + #{$addMobSize} *((100vw - 320px) / #{$maxWidth}))
+
+  @media (min-width: 767px)
+    line-height: calc(#{$mobSize + px} + #{$addSize} *(100vw / #{$maxWidth}))
+
+//</ДЕЛАЕТ АДАПТИВНЫЙ СТРОКОВЫЙ ИНТЕРВАЛ>================================================================================
 
 //<ПОДКЛЮЧАЕТ ШРИФТ>=====================================================================================================
 @mixin font($font_name, $file_name, $weight, $style)
