create description slider

--- a/#source/sass/blocks/_preview.sass
+++ b/#source/sass/blocks/_preview.sass
@@ -8,6 +8,7 @@
     display: inline-block
     margin: 0 0 32px 0
     text-align: center
+    @include adf(24, 17.5)
     @include adi(14, 10)
   &__heading
     margin: 0 0 24px 0
