--- a/#source/sass/blocks/_descr-slider.sass
+++ b/#source/sass/blocks/_descr-slider.sass
@@ -34,8 +34,6 @@
     &>img
       width: 374px
       height: 374px
-      // &.description-slider__bg-block-img-active
-      //   animation: changeSize 1s ease-in 1 alternate forwards
   &__switches
     position: absolute
     top: 50%
@@ -74,6 +72,7 @@
     align-items: flex-start
     justify-content: space-between
     max-width: 526px
+    width: 100%
   &__type
     margin: 0 0 45px 0
     font-family: Poppins
@@ -88,7 +87,7 @@
     font-weight: normal
     color: #E2B024
     @include adf(74, 45)
-    @include adi(43, 26)
+    @include adi(60, 26)
   &__subtitle
     margin: 0 0 52px 0
     font-family: Poppins
