create reviews block and add javascript for it

--- a/#source/sass/style.sass
+++ b/#source/sass/style.sass
@@ -165,6 +165,7 @@ body, html
 @import "blocks/_preview.sass"
 @import "blocks/_descr-slider.sass"
 @import "blocks/_futured-block.sass"
+@import "blocks/_reviews-block.sass"
 @import "blocks/_footer.sass"
 @import "assets/_media.sass"
 
