create adaptive for reviews block

--- a/#source/sass/assets/_media.sass
+++ b/#source/sass/assets/_media.sass
@@ -148,6 +148,12 @@
     &__element
       grid-template-columns: repeat(2, 1fr)
 
+  .reviews-block
+    padding: 95px 0 50px 0
+    &__text
+      max-width: 500px
+
+
 @media (max-width: 768px)
   .futured-block
     padding: 70px 0
@@ -248,6 +254,9 @@
     &-tabs-navigation
       &__item:not(:last-child)
         margin: 0 30px 0 0
+
+  .reviews-block
+    padding: 50px 0
 
 @media (max-width: 435px)
   .exl-modal
