--- a/#source/sass/blocks/_reviews-block.sass
+++ b/#source/sass/blocks/_reviews-block.sass
@@ -14,7 +14,7 @@
   &__slider-wrapper
     position: relative
     width: 100%
-    padding: 0 0 50px 0
+    padding: 0 0 80px 0
     overflow: hidden
   &__slider-inner
     display: flex
@@ -23,7 +23,7 @@
     display: flex
     flex-direction: column
     align-items: center
-    justify-content: space-between
+    justify-content: flex-start
     width: 100%
   &__avatar
     width: 156px
